--- a/rustantic/Cargo.toml
+++ b/rustantic/Cargo.toml
@@ -9,3 +9,4 @@ quote = { version = "1.0.38" }
 serde = { version = "1.0.217", features = ["derive"] }
 walkdir = "2.5.0"
 convert_case = "0.7.1"
+itertools = "0.14.0"
