--- a/rustantic/Cargo.toml
+++ b/rustantic/Cargo.toml
@@ -22,10 +22,13 @@ exclude = [
     "/tests/ui",
 ]
 
+[features]
+default = []
+generator = ["dep:walkdir", "dep:convert_case", "dep:itertools"]
+
 [dependencies]
 syn = { version = "2.0.98", features = ["visit", "full", "derive", "parsing"] }
 quote = { version = "1.0.38" }
-serde = { version = "1.0.217", features = ["derive"] }
-walkdir = "2.5.0"
-convert_case = "0.7.1"
-itertools = "0.14.0"
+walkdir = { version = "2.5.0", optional = true }
+convert_case = { version = "0.7.1", optional = true }
+itertools = { version = "0.14.0", optional = true }
