--- a/rustantic_test/pyproject.toml
+++ b/rustantic_test/pyproject.toml
@@ -11,10 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
-dependencies = [
-    "maturin>=1.8.1",
-    "pydantic>=2.10.6",
-]
+dependencies = ["maturin>=1.8.2", "pydantic>=2.10.6"]
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
